--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ទុនស៊ីន & នីតា - សិរីមង្គលអាពាហ៍ពិពាហ៍</title>
-    <meta name="description" content="សិរីមង្គលអាពាហ៍ពិពាហ៍របស់ ទុនស៊ីន និង នីតា - ថ្ងៃទី០៥​ ខែមករា ឆ្នាំ២០២៥" />
-    <meta name="author" content="TunsinNita Wedding Invitations" />
+    <title>វិស្សុត & វិច្ឆិកា - សិរីមង្គលអាពាហ៍ពិពាហ៍</title>
+    <meta name="description" content="សិរីមង្គលអាពាហ៍ពិពាហ៍របស់ វិស្សុត និង វិច្ឆិកា - ថ្ងៃទី០២ ខែវិច្ឆិកា ឆ្នាំ២០២៥" />
+    <meta name="author" content="Visoth&Vichhka Wedding Invitations" />
 
-    <meta property="og:title" content="ទុនស៊ីន & នីតា - សិរីមង្គលអាពាហ៍ពិពាហ៍" />
-    <meta property="og:description" content="សិរីមង្គលអាពាហ៍ពិពាហ៍របស់ ទុនស៊ីន និង នីតា - ថ្ងៃទី០៥​ ខែមករា ឆ្នាំ២០២៥" />
+    <meta property="og:title" content="វិស្សុត & វិច្ឆិកា - សិរីមង្គលអាពាហ៍ពិពាហ៍" />
+    <meta property="og:description" content="សិរីមង្គលអាពាហ៍ពិពាហ៍របស់ វិស្សុុត និង វិច្ឆិកា - ថ្ងៃទី០២​ ខែវិច្ឆិកា ឆ្នាំ២០២៥" />
     <meta property="og:type" content="website" />
+
+
+    
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
@@ -30,16 +33,16 @@
     }
 
     #root {
-      position: relative;
-      width: 100%;
-      height: auto;
-      background-image: url('/src/components/images/cover/cover4.gif');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      z-index: 0; /* make sure it's under your content */
-    }
+  position: relative;
+  width: 100%;
+  height: 100vh; /* full viewport height */
+  background-image: url('/src/components/images/cover/cover4.gif');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  z-index: 0;
+}
 
     /* Blue overlay only on background */
     #root::before {
