--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     <meta property="og:title" content="វិស្សុត & វិច្ឆិកា - សិរីមង្គលអាពាហ៍ពិពាហ៍" />
     <meta property="og:description" content="សិរីមង្គលអាពាហ៍ពិពាហ៍របស់ វិស្សុុត និង វិច្ឆិកា - ថ្ងៃទី០២​ ខែវិច្ឆិកា ឆ្នាំ២០២៥" />
     <meta property="og:type" content="website" />
-
-
     
 
     <meta name="twitter:card" content="summary_large_image" />
@@ -33,16 +31,16 @@
     }
 
     #root {
-  position: relative;
-  width: 100%;
-  height: 100vh; /* full viewport height */
-  background-image: url('/src/components/images/cover/cover4.gif');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  z-index: 0;
-}
+      position: relative;
+      width: 100%;
+      height: auto;
+      background-image: url('/src/components/images/cover/cover4.gif');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      z-index: 0; /* make sure it's under your content */
+    }
 
     /* Blue overlay only on background */
     #root::before {
