--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Visoth&Vichhka Wedding Invitations" />
 
     <meta property="og:title" content="វិស្សុត & វិច្ឆិកា - សិរីមង្គលអាពាហ៍ពិពាហ៍" />
-    <meta property="og:description" content="សិរីមង្គលអាពាហ៍ពិពាហ៍របស់ វិស្សុុត និង វិច្ឆិកា - ថ្ងៃទី០២​ ខែវិច្ឆិកា ឆ្នាំ២០២៥" />
+    <meta property="og:description" content="សិរីមង្គលអាពាហ៍ពិពាហ៍របស់ វិស្សុត និង វិច្ឆិកា - ថ្ងៃទី០២​ ខែវិច្ឆិកា ឆ្នាំ២០២៥" />
     <meta property="og:type" content="website" />
     
 
@@ -63,7 +63,7 @@
         content: "";
         position: absolute;
         inset: 0;
-        background: rgba(40, 40, 71, 0.5);
+        background: rgba(40, 40, 71, 0);
         z-index: -1;
       }
 
